# fixed-income-fund-recsys

./: .gitignore  Dockerfile  Makefile  README.md  core.py  manifest.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml
docker/: entrypoint.sh
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/notebooks/: example.md
docs/notebooks/: example.ipynb
fif_recsys/: __init__.py  constants.py  main.py  manifest.yaml
fif_recsys/commands/: data.py  feature.py  model.py  policy.py
tests/: test_config.py  test_feature.py  test_fetch.py  test_model.py  test_policy.py
